--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+body {
+    margin: 0 auto;
+    max-width: 700px;
+    line-height: 180% !important;
+    padding: 24px;
+    font-family: sans-serif;
+    background-color: #282a36;
+/*     background-color: #0d1117; */
+    color: #f8f8f2;
+/*     color: #c9d1d9; */
+}
+a {
+/*     color: #58a6ff; */
+    color: #6272a4;
+}
 .also {
     display: block;
     font-size: 0.77419em;
@@ -158,7 +173,7 @@
 .calibre {
     display: block;
     font-size: 1.29167em;
-    line-height: 1.2;
+    line-height: 150%;
     margin-bottom: 0;
     margin-left: 5pt;
     margin-right: 5pt;
@@ -166,6 +181,7 @@
     padding-left: 0;
     padding-right: 0
     }
+
 .calibre1 {
     text-decoration: none
     }
@@ -412,14 +428,13 @@
     text-align: center;
     text-indent: 0
     }
-.dropcap {
+.dropcap::first-letter {
     float: left;
-    font-size: 7em;
-    font-weight: normal;
-    margin-bottom: -0.6em;
-    margin-top: -0.6em;
-    padding-bottom: 0.15em;
-    padding-right: 5px
+    font-size: 10em;
+    margin-top: 0.08em;
+    margin-bottom: 0.2em;
+    padding-right: 8px;
+    padding-bottom: -0.5em; 
     }
 .fm {
     display: block;
